# material_handling_robot

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
data/map/: hospitalmap.pgm  hospitalmap.yaml
data/world/: hospital.world
doxygen/: Doxyfile
doxygen/html/: MaterialHandlerTest_8cpp.html  MaterialHandlerTest_8cpp__incl.map  MaterialHandlerTest_8cpp__incl.md5  MaterialHandler_8cpp.html  MaterialHandler_8cpp__incl.map  MaterialHandler_8cpp__incl.md5  MaterialHandler_8h.html  MaterialHandler_8h__dep__incl.map  MaterialHandler_8h__dep__incl.md5  MaterialHandler_8h__incl.map  MaterialHandler_8h__incl.md5  MaterialHandler_8h_source.html  ObstacleChangeTest_8cpp.html  ObstacleChangeTest_8cpp__incl.map  ObstacleChangeTest_8cpp__incl.md5  ObstacleChange_8cpp.html  ObstacleChange_8cpp__incl.map  ObstacleChange_8cpp__incl.md5  ObstacleChange_8h.html  ObstacleChange_8h__dep__incl.map  ObstacleChange_8h__dep__incl.md5  ObstacleChange_8h__incl.map  ObstacleChange_8h__incl.md5  ObstacleChange_8h_source.html  PathPlannerTest_8cpp.html  PathPlannerTest_8cpp__incl.map  PathPlannerTest_8cpp__incl.md5  PathPlanner_8cpp.html  PathPlanner_8cpp__incl.map  PathPlanner_8cpp__incl.md5  PathPlanner_8h.html  PathPlanner_8h__dep__incl.map  PathPlanner_8h__dep__incl.md5  PathPlanner_8h__incl.map  PathPlanner_8h__incl.md5  PathPlanner_8h_source.html  RobotControllerTest_8cpp.html  RobotControllerTest_8cpp__incl.map  RobotControllerTest_8cpp__incl.md5  RobotController_8cpp.html  (+33 more)
doxygen/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
doxygen/latex/: MaterialHandlerTest_8cpp.tex  MaterialHandlerTest_8cpp__incl.md5  MaterialHandler_8cpp.tex  MaterialHandler_8cpp__incl.md5  MaterialHandler_8h.tex  MaterialHandler_8h__dep__incl.md5  MaterialHandler_8h__incl.md5  ObstacleChangeTest_8cpp.tex  ObstacleChangeTest_8cpp__incl.md5  ObstacleChange_8cpp.tex  ObstacleChange_8cpp__incl.md5  ObstacleChange_8h.tex  ObstacleChange_8h__dep__incl.md5  ObstacleChange_8h__incl.md5  PathPlannerTest_8cpp.tex  PathPlannerTest_8cpp__incl.md5  PathPlanner_8cpp.tex  PathPlanner_8cpp__incl.md5  PathPlanner_8h.tex  PathPlanner_8h__dep__incl.md5  PathPlanner_8h__incl.md5  RobotControllerTest_8cpp.tex  RobotControllerTest_8cpp__incl.md5  RobotController_8cpp.tex  RobotController_8cpp__incl.md5  RobotController_8h.tex  RobotController_8h__dep__incl.md5  RobotController_8h__incl.md5  annotated.tex  classMaterialHandler.tex  classObstacleChange.tex  classPathPlanner.tex  classRobotController.tex  dir_076c00f0f882b03d7e0bfb8a4a92ef3f.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  structPosition.tex
gazebo_models/wood_cube_10cm/: model.urdf
include/material_handling_robot/: MaterialHandler.h  ObstacleChange.h  PathPlanner.h  RobotController.h
launch/: materialNode.launch  turtlebotDemo.launch
param/: dwa_local_planner_params.yaml
results/: cppcheckOutput.txt  cpplintOutput.txt
src/: MaterialHandler.cpp  ObstacleChange.cpp  PathPlanner.cpp  RobotController.cpp  main.cpp
test/: MaterialHandlerTest.cpp  ObstacleChangeTest.cpp  PathPlannerTest.cpp  RobotControllerTest.cpp  main.cpp  materialHandling.test
